packages/spark-bff/openshift/service-config.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: 'true'
    app: spark-web-gql-service
    version: latest
    group: nz.co.spark.digital.services
  name: spark-web-gql-service
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: spark-web-gql-service
    group: nz.co.spark.digital.services
