packages/spark-bff/openshift/route-config.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: 'true'
    app: spark-web-gql-service
    version: latest
    group: nz.co.spark.digital.services
  name: spark-web-gql-service
spec:
  port:
    targetPort: 3001
  to:
    kind: Service
    name: spark-web-gql-service
